# spoticomp

./: '  Cargo.toml  LICENSE  \  recent_played_songs.json
Assets/: .spotify_token_cache.json  recently_played_songs.json
Docs/: main.md  main.txt
Ideas/: features.txt  file_structure.txt
config/: config.json
src/: album_art.rs  album_cover.rs  authorize.rs  configuration.rs  lyrics.rs  main.rs  popular_endpoints.rs  recently_played.rs  ui.rs
